--- a/petasitus.html
+++ b/petasitus.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <HTML>
 <head>
+  <title>Daftar Isi Blog</title>
+  <link href='https://jurusanakelektro.blogspot.co.id/favicon.ico' rel='icon' type='image/x-icon'/>
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400italic,400,500,500italic,700,700italic,900%7CMaterial+Icons' rel='stylesheet' type='text/css'/>
 <style type='text/css'>
 body{font-family:Roboto, sans-serif, Arial;font-weight:300;font-size:15px;text-decoration:none;background:#fff;box-sizing:border-box;padding:5px 20%}
@@ -39,7 +41,7 @@ h4{font-size:20px}
 #feed-nav span{cursor:wait}
 @media screen and (max-width:600px){#table-outer table{margin:0 auto;width:100%}
 #feed-container,#table-outer{margin:0 auto}
-body{padding:10px 20px}
+body{padding:60px 20px 10px}
 #feed-container li .inner{margin:5px auto;height:auto}
 #feedContainer li{float:none;display:block;width:auto;height:auto}
 #feed-container li .news-text, #feedContainer:after,#feed-container li img{display:none}
