--- a/petasitus.html
+++ b/petasitus.html
@@ -46,10 +46,19 @@ body{padding:60px 20px 10px}
 #feedContainer li{float:none;display:block;width:auto;height:auto}
 #feed-container li .news-text, #feedContainer:after,#feed-container li img{display:none}
 }
+  #menyu ul li{list-style:none;float:right;}
+  #menyu ul li a{text-decoration:none;transition:all 300ms ease-in-out;}  
 </style>
 </head>
 <body>
-<a class='back' href='https://jurusanakelektro.blogspot.com' title='Kembali'><i class="material-icons">&#xE317;</i>Kembali</a>
+<a class='back' href='https://jurusanakelektro.blogspot.com' title='Kembali'><i class="material-icons">&#xE317;</i>Beranda</a>
+  <nav id='menyu'>
+    <ul>
+      <li><a href='#'>Tentang</a></li>
+      <li><a href='#'>Hubungi Kami</a></li>
+      <li><a href='#'>Privasi</a></li>
+    </ul>
+  </nav>
 <h1><a href='https://jurusanakelektro.blogspot.com' title='Kembali ke beranda'>Jurus Anak Elektronika</a></h1>
 <div class='content'>
 <div class='utama'>
