--- a/petasitus.html
+++ b/petasitus.html
@@ -46,7 +46,8 @@ body{padding:60px 20px 10px}
 #feedContainer li{float:none;display:block;width:auto;height:auto}
 #feed-container li .news-text, #feedContainer:after,#feed-container li img{display:none}
 }
-  #menyu ul li{list-style:none;float:right;}
+  
+  #menyu ul li{list-style:none;float:right;position:relative;font-size:15}
   #menyu ul li a{text-decoration:none;transition:all 300ms ease-in-out;}  
 </style>
 </head>
