--- a/petasitus.html
+++ b/petasitus.html
@@ -10,7 +10,7 @@ body{font-family:Roboto, sans-serif, Arial;font-weight:300;font-size:15px;text-d
 .utama{padding:20px;position:relative;box-sizing:border-box;background:#fff;width:100%;height:auto}
 a{text-decoration:none;font-weight:400;color:#333}
 a:hover{color:#E94141}
-a.back{font-size:30px;background:#FF3232;position:absolute;padding:10px;20px;border-radius:3px;top:20px;color:#fff;font-weight:700}
+a.back{font-size:30px;background:#FF3232;position:absolute;padding:10px;20px;border-radius:3px;top:0px;color:#fff;font-weight:700;left:0px}
 h1{font-size:35px;text-align:center}
 h2{font-size:30px;text-align:center}
 h3{font-size:25px}
