--- a/petasitus.html
+++ b/petasitus.html
@@ -55,9 +55,9 @@ body{padding:60px 20px 10px}
 <a class='back' href='https://jurusanakelektro.blogspot.com' title='Kembali'><i class="material-icons">&#xE317;</i>Beranda</a>
   <nav id='menyu'>
     <ul>
-      <li><a href='#'>Tentang</a></li>
-      <li><a href='#'>Hubungi Kami</a></li>
-      <li><a href='#'>Privasi</a></li>
+      <li><a href='https://jurusanakelektro.blogspot.com/p/tentang.html'>Tentang</a></li>
+      <li><a href='https://cdn.rawgit.com/KompiAjaib/kompi-html/master/contactform-amp3.html?email=kamvretterbang@outlook.com&url=https://jurusanakelektro.blogspot.co.id/p/terimakasih.html&blog=https://jurusanakelektro.blogspot.co.id/&title=Jurus%20Anak%20Elektro'>Hubungi Kami</a></li>
+      <li><a href='https://jurusanakelektro.blogspot.com/p/privasi.html'>Privasi</a></li>
     </ul>
   </nav>
 <h1><a href='https://jurusanakelektro.blogspot.com' title='Kembali ke beranda'>Jurus Anak Elektronika</a></h1>
